--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 			<a href="https://mobimg.b-cdn.net/v3/fetch/8d/8d8a680665e288fd18f51c9c5a739cc8.jpeg">Press to see more</a>  </td>
 		</tr>
 	</table>
+	<br><br>
+	<a href="https://eskibekov14.github.io/My5ProjectWeb/">NextTask</a>
 </body>
 </html>
