--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 		</tr>
 	</table>
 	<br><br>
-	<a href="https://eskibekov14.github.io/My5ProjectWeb/">NextTask</a>
+	<a href="https://eskibekov14.github.io/My5ProjectWeb/">NextTask5</a>
 </body>
 </html>
